@startuml PatientController

skinparam classAttributeIconSize 0

package org.springframework {
    package web.bind.annotation {
        annotation RestController
        annotation RequestMapping
        annotation PathVariable
        annotation RequestParam
        annotation ExceptionHandler
        annotation ResponseStatus
    }

    package http {
        class ResponseEntity<T>
    }
    package util {
        class Map<K,V>
    }
}

package java.util {
    interface Collection
    class UUID
}

package com.acme.patientenverwaltung {
    package entity {
        class Patient
    }
    package service {
        class PatientService << control >> << @Service >>

        class NotFoundException

        PatientService .right[hidden].> Patient
    }

    package rest #DDDDDD {
        class PatientController << boundary >> << @RestController >> << @RequestMapping >> {
            ~ @GetMapping getById(@PathVariable id: UUID): Patient
            ~ @GetMapping get(@RequestParam queryParam: Map<String, String>): Collection<Patient>
        }

        class GlobalExceptionHandler << @ControllerAdvice >> {
            ~ @ExceptionHandler @ResponseStatus onNotFound(ex: NotFoundException)
        }

        PatientController o--> "1" PatientService : service

        PatientController .up.> RestController
        PatientController .up.> RequestMapping
        PatientController .up.> PathVariable
        PatientController .up.> RequestParam
        PatientController .up.> ResponseEntity
        PatientController .up.> MultiValueMap
        PatientController .down.> Patient

        GlobalExceptionHandler .up.> ExceptionHandler
        GlobalExceptionHandler .up.> ResponseStatus
        GlobalExceptionHandler ..> NotFoundException

        PatientController .right.> UUID
        PatientController ..> Collection
    }
}

hide empty members

footer (c) Jonah Doll, Juergen Zimmermann

@enduml
